--- a/TM.RazorSharedUI/TM.RazorSharedUI.csproj
+++ b/TM.RazorSharedUI/TM.RazorSharedUI.csproj
@@ -1,16 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageId>TM.RazorSharedUI</PackageId>
+		<Version>1.1.1</Version>
+		<Authors>Kenjie-Sama</Authors>
+		<Company>TroubleMakers</Company>
+		<RazorLangVersion>9.0</RazorLangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
   </PropertyGroup>
-
+	
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
-
+	<ItemGroup>
+		<EmbeddedResource Include="Views\**\*.cshtml" />
+	</ItemGroup>
 
 </Project>
