--- a/TM.RazorSharedUI/TM.RazorSharedUI.csproj
+++ b/TM.RazorSharedUI/TM.RazorSharedUI.csproj
@@ -2,23 +2,23 @@
 
   <PropertyGroup>
 		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>TM.RazorSharedUI</PackageId>
-		<Version>1.1.1</Version>
+		<Version>1.0.4</Version>
 		<Authors>Kenjie-Sama</Authors>
 		<Company>TroubleMakers</Company>
-		<RazorLangVersion>9.0</RazorLangVersion>
+		<RazorLangVersion>8.0</RazorLangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-  </PropertyGroup>
-	
-  <ItemGroup>
+		<EnableDefaultContentItems>false</EnableDefaultContentItems>
+	</PropertyGroup>
+
+	<ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 	<ItemGroup>
-		<EmbeddedResource Include="Views\**\*.cshtml" />
+		<Content Include="Views\**\*.cshtml" CopyToOutputDirectory="Always" />
 	</ItemGroup>
 
 </Project>
